--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@astrojs/tailwind": "^6.0.0",
     "astro": "^5.2.5",
     "autoprefixer": "^10.4.20",
+    "qrcode.react": "^4.2.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-google-autocomplete": "^2.7.5",
@@ -26,4 +27,3 @@
     "@types/react-dom": "^18.3.0"
   }
 }
-
