--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@astrojs/react": "^4.2.0",
     "@astrojs/tailwind": "^6.0.0",
+    "@astrojs/vercel": "^9.0.2",
     "astro": "^5.2.5",
     "autoprefixer": "^10.4.20",
     "qrcode.react": "^4.2.0",
