--- a/vercel.json
+++ b/vercel.json
@@ -1,1 +1,10 @@
-{}
+{
+    "functions": {
+        "_render": {
+            "runtime": "nodejs20.x"
+        },
+        "api/**/*": {
+            "runtime": "nodejs20.x"
+        }
+    }
+}
